fix: fix code block spacing and bg

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1207,12 +1207,12 @@ Usage (In Ghost editor):
     margin: 1.5em 0 3em;
     padding: 20px;
     max-width: 100%;
-    border: color-mod(var(--darkgrey) l(-10%)) 1px solid;
+    /* border: color-mod(var(--darkgrey) l(-10%)) 1px solid; */
     color: var(--whitegrey);
     font-size: 1.4rem;
     line-height: 1.5em;
     background: color-mod(var(--darkgrey) l(-3%));
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .post-full-content pre ::selection {
